Fix header height on mobile and style search bar. (#34)
Ref. #8.

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -25,29 +25,36 @@ a:hover {
 }
 @media only screen and (max-width: 600px) {
   .nav-logo {
-    position: absolute;
     height: 60%;
-
+    position: absolute;
+    top: 20%;
     right: 30%;
-    margin: auto auto;
+    margin: auto;
   }
 }
 @media only screen and (min-width: 601px) {
   .nav-logo {
-    position: absolute;
     height: 60%;
-
+    position: absolute;
     right: 0;
     left: 0;
     top: 0;
     bottom: 0;
-    margin: auto auto;
+    margin: auto;
   }
 }
 .search-bar {
   margin: 20px;
 }
 .header-bottom {
+  min-height: 200px;
+  background-color: white;
+
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-width: 1px;
+  border-color: #cccccc;
+
   text-align: center;
   max-width: 720px;
   margin: 0 auto;
@@ -56,5 +63,28 @@ a:hover {
   width: 80%;
 }
 .header-mentorship-intro {
+  width: 50%;
+  margin: 0 auto;
   text-align: justify;
+}
+@media only screen and (max-width: 600px) {
+  .header-mentorship-intro {
+    width: 80%;
+  }
+}
+.search-input {
+  width: 50%;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 10px auto;
+  transition: box-shadow 0.1s ease-in-out;
+}
+.search-input:focus {
+  outline: none;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+}
+@media only screen and (max-width: 600px) {
+  .search-input {
+    width: 80%;
+  }
 }
